# spel.old

./: .gitignore
src/: CMakeLists.txt  install.nsi  install_x64.nsi
src/cmake/: FindEigen3.cmake  FindOpenGM.cmake  modules.cmake
src/spel/: CMakeLists.txt  bodyJoint.cpp  bodyJoint.hpp  bodyPart.cpp  bodyPart.hpp  colorHistDetector.cpp  colorHistDetector.hpp  detector.cpp  detector.hpp  frame.cpp  frame.hpp  hogDetector.cpp  hogDetector.hpp  imagesimilaritymatrix.cpp  imagesimilaritymatrix.hpp  interpolation.cpp  interpolation.hpp  keyframe.cpp  keyframe.hpp  limbLabel.cpp  limbLabel.hpp  lockframe.cpp  lockframe.hpp  minspanningtree.cpp  minspanningtree.hpp  nskpsolver.cpp  nskpsolver.hpp  predef.hpp  score.cpp  score.hpp  sequence.cpp  sequence.hpp  skeleton.cpp  skeleton.hpp  solution.cpp  solution.hpp  solver.cpp  solver.hpp  solvlet.cpp  solvlet.hpp  (+7 more)
src/tests/: CMakeLists.txt  test_exec.cpp
src/tests/CHDTrainTestData/: trijumpSD_50x41.xml
src/tests/CHDTrainTestData/cam/: 0000_50x41.cam
src/tests/CHDTrainTestData/mask/: mask0000_50x41.pgm
src/tests/SimilarityMatrixTestsData/: In_Matrix.txt  In_Matrix2.txt
src/tests/spel/: ImageSimilarityMatrix_tests.cpp  TestsFunctions.cpp  TestsFunctions.hpp  bodyJoint_constructor_tests.cpp  bodyJoint_get_and_set_tests.cpp  bodyJoint_operators_tests.cpp  bodyPart_constructor_tests.cpp  bodyPart_get_and_set_tests.cpp  bodyPart_operators_tests.cpp  colorHistDetector_get_and_set_tests.cpp  colorHistDetector_operators_tests.cpp  colorHistDetector_private_tests.cpp  colorHistDetector_train_tests.cpp  detector_tests.cpp  frame_general_tests.cpp  frames_tests.cpp  hogDetector_get_and_set_tests.cpp  hogdetector_tests.cpp  interpolation_get_and_set_tests.cpp  keyframe_get_and_set_tests.cpp  limbLabel_tests.cpp  lockframe_get_and_set_tests.cpp  nskpsolver_tests.cpp  score_constructor_tests.cpp  score_get_and_set_tests.cpp  score_operators_tests.cpp  skeleton_get_and_set_tests.cpp  skeleton_operators_tests.cpp  spelHelper_angle_dist_tests.cpp  spelHelper_angle_tests.cpp  spelHelper_distsquared_tests.cpp  spelHelper_poserect_tests.cpp  spelHelper_rotatepoint_tests.cpp  surfDetector_get_and_set_tests.cpp
src/utils/: CMakeLists.txt
src/utils/general/: projectLoader.cpp  projectLoader.hpp  projectRunner.cpp  projectRunner.hpp
src/utils/solverTests/: CMakeLists.txt  hybridSolverTest.cpp  nskpSolverTest.cpp  tlpsSolverTest.cpp
